# Chessify

./: .gitignore  1  CMakeCache.txt  CMakeLists.txt  Chessify.pro  Chessify.pro.user.0df7a5f  Definitions.cpp  Definitions.h  Definitions.h.autosave  Makefile  Taskfile.yml  availabemovesfinder.cpp  availabemovesfinder.h  availableactionsfinder.cpp  availableactionsfinder.h  boardwidget.cpp  boardwidget.h  chessify  cmake_install.cmake  core.cpp  core.h  mainwindow.h  player.cpp  player.h  src.qrc
Chessify/: CMakeLists.txt
chessify_autogen/EWIEGA46WW/: moc_boardwidget.cpp  moc_boardwidget.cpp.d  moc_mainwindow.cpp.d
src/: Definitions.cpp  availableactionsfinder.cpp  availableactionsfinder.h  boardwidget.cpp  boardwidget.h  core.cpp  core.h  mainwindow.cpp  mainwindow.h  player.cpp  player.h  resources.qrc
src/headers/: Definitions.h  availableactionsfinder.h  mainwindow.h  menue.h
src/sources/: Definitions.cpp  availableactionsfinder.cpp  boardwidget.cpp  core.cpp  mainwindow.cpp  menue.cpp  player.cpp
